@@ -10,6 +10,9 @@ Release date: tba
 Core and Builtins
 -----------------
 
+- Issue #24257: Fixed system error in the comparison of faked
+  types.SimpleNamespace.
+
 - Issue #22939: Fixed integer overflow in iterator object.  Patch by
   Clement Rouault.
 
@@ -55,6 +58,9 @@ Core and Builtins
 
 Library
 -------
+
+- Issue #24257: Fixed segmentation fault in sqlite3.Row constructor with faked
+  cursor type.
 
 - Issue #22107: tempfile.gettempdir() and tempfile.mkdtemp() now try again
   when a directory with the chosen name already exists on Windows as well as
